zadanie 7 - dodanie obslugi przycisku close modala

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,8 +11,10 @@
     <body>
         @@include("./page-header/index.html")
 
+        <button class="hide" id="show-modal-welcome">Show modal Welcome</button>
+
         <main>
-            <div class="modal" id="modal-welcome">
+            <div class="modal hide" id="modal-welcome">
                 <h2>Welcome</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque facere nulla rem mollitia expedita eum voluptate quod asperiores quasi animi consequuntur, repellendus eaque pariatur laborum, nemo sed? Quam, voluptatem beatae.</p>
                 <button>Close</button>
